--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ requires-python = ">=3.12"     # Python 버전 요구 사항
 license = { file = "LICENSE" } # 라이센스 파일 경로 (선택 사항)
 
 dependencies = [
+    "hvac>=2.4.0",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.13.0",
     "pyspark==4.1.1",
+    "pyyaml>=6.0.3",
 ]
 
 [build-system]
