--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,5 +109,5 @@ docstring-code-format = false
 docstring-code-line-length = "dynamic"
 
 [[tool.mypy.overrides]]
-module = ["pyspark.*", "pydantic.*", "pydantic_settings.*"]
+module = ["pyspark.*", "pydantic.*", "pydantic_settings.*", "confluent_kafka.*"]
 ignore_missing_imports = true
