--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.12"     # Python 버전 요구 사항
 license = { file = "LICENSE" } # 라이센스 파일 경로 (선택 사항)
 
 dependencies = [
+    "authlib>=1.6.8",
+    "cachetools>=7.0.1",
+    "confluent-kafka>=2.13.0",
     "hvac>=2.4.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.13.0",
